--- a/apps/confluent-platform.yaml
+++ b/apps/confluent-platform.yaml
@@ -1,4 +1,9 @@
 ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: confluent
+---
 apiVersion: platform.confluent.io/v1beta1
 kind: Zookeeper
 metadata:
