--- a/apps/confluent-platform.yaml
+++ b/apps/confluent-platform.yaml
@@ -21,6 +21,7 @@ spec:
   replicas: 3
   image:
     application: confluentinc/cp-server:7.2.1
+    init: confluentinc/confluent-init-container:2.8.0
   dataVolumeCapacity: 100Gi
   metricReporter:
     enabled: true
@@ -37,6 +38,7 @@ spec:
   replicas: 1
   image:
     application: confluentinc/cp-server-connect:7.2.1
+    init: confluentinc/confluent-init-container:2.8.0
   dependencies:
     kafka:
       bootstrapEndpoint: kafka:9071
@@ -50,6 +52,7 @@ spec:
   replicas: 1
   image:
     application: confluentinc/cp-ksqldb-server:7.2.1
+    init: confluentinc/confluent-init-container:2.8.0
   dataVolumeCapacity: 10Gi
 ---
 apiVersion: platform.confluent.io/v1beta1
@@ -61,6 +64,7 @@ spec:
   replicas: 1
   image:
     application: confluentinc/cp-enterprise-control-center:7.2.1
+    init: confluentinc/confluent-init-container:2.8.0
   dataVolumeCapacity: 10Gi
   dependencies:
     schemaRegistry:
@@ -81,6 +85,7 @@ spec:
   replicas: 3
   image:
     application: confluentinc/cp-schema-registry:7.2.1
+    init: confluentinc/confluent-init-container:2.8.0
 ---
 apiVersion: platform.confluent.io/v1beta1
 kind: KafkaRestProxy
@@ -91,6 +96,7 @@ spec:
   replicas: 1
   image:
     application: confluentinc/cp-kafka-rest:7.2.1
+    init: confluentinc/confluent-init-container:2.8.0
   dependencies:
     schemaRegistry:
       url: http://schemaregistry.confluent.svc.cluster.local:8081
