--- a/charts/web/templates/ingress.yaml
+++ b/charts/web/templates/ingress.yaml
@@ -1,19 +1,40 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: {{ .Release.Name }}-web-ingress
-  namespace: {{ .Release.Namespace }}
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+  name: {{ include "web.fullname" . }}
+  labels:
+    {{- include "web.labels" . | nindent 4 }}
 spec:
-  rules:
-  - host: {{ .Values.ingress.hosts[0].host | default "localhost" }}
-    http:
-      paths:
-      - path: {{ .Values.ingress.hosts[0].paths[0].path | default "/" }}
-        pathType: {{ .Values.ingress.hosts[0].paths[0].pathType | default "Prefix" }}
-        backend:
-          service:
-            name: {{ .Release.Name }}-web
-            port:
-              number: 80
+  replicas: {{ .Values.replicaCount }}
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: {{ include "web.name" . }}
+      app.kubernetes.io/instance: {{ .Release.Name }}
+  template:
+    metadata:
+      labels:
+        app.kubernetes.io/name: {{ include "web.name" . }}
+        app.kubernetes.io/instance: {{ .Release.Name }}
+        {{- include "web.labels" . | nindent 8 }}
+    spec:
+      containers:
+      - name: {{ .Chart.Name }}
+        image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+        imagePullPolicy: {{ .Values.image.pullPolicy }}
+        ports:
+        - name: http
+          containerPort: 80
+        livenessProbe:
+          httpGet:
+            path: /
+            port: http
+          initialDelaySeconds: 3
+          periodSeconds: 3
+        readinessProbe:
+          httpGet:
+            path: /
+            port: http
+          initialDelaySeconds: 3
+          periodSeconds: 3
+        resources:
+          {{- toYaml .Values.resources | nindent 12 }}
