--- a/charts/web/templates/service.yaml
+++ b/charts/web/templates/service.yaml
@@ -1,15 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-web
+  name: {{ include "web.fullname" . }}
   labels:
-    app: {{ .Release.Name }}-web
+    {{- include "web.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: 80
-      protocol: TCP
-      name: http
+  - port: {{ .Values.service.port }}
+    targetPort: {{ .Values.service.port }}
   selector:
-    app: {{ .Release.Name }}-web
+    app: {{ include "web.name" . }}
