--- a/charts/websocket/values.yaml
+++ b/charts/websocket/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 
 image:
-  repository: myrepo/websocket
+  repository: socrates12345/websocket
   tag: "latest"
   pullPolicy: IfNotPresent
 
