--- a/snow-plow/iglu-server.yaml
+++ b/snow-plow/iglu-server.yaml
@@ -37,6 +37,7 @@ spec:
         volumeMounts:
         - name: pgdata
           mountPath: /var/lib/postgresql/data
+          subPath: pgdata
       volumes:
       - name: pgdata
         persistentVolumeClaim:
