--- a/snow-plow/snow-plow.yaml
+++ b/snow-plow/snow-plow.yaml
@@ -80,7 +80,7 @@ data:
 
         sink {
           enabled = kafka
-          brokers = "kafka.confluent.svc.cluster.local:29092:29092"
+          brokers = "kafka-0-internal.confluent.svc.cluster.local:9092:9092"
           retries = 0
         }
 
@@ -176,7 +176,7 @@ data:
         }
         sourceSink {
           enabled = kafka
-          brokers = "kafka.confluent.svc.cluster.local:29092"
+          brokers = "kafka-0-internal.confluent.svc.cluster.local:9092"
           retries = 0
         }
         buffer {
