--- a/charts/web/Chart.yaml
+++ b/charts/web/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
 name: web
 description: A Helm chart for Nginx web server serving the Snowplow test page
-version: 0.1
+version: "0.1"
 appVersion: "1.0.0"
