--- a/charts/web/templates/deployment.yaml
+++ b/charts/web/templates/deployment.yaml
@@ -1,24 +1,27 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "web.fullname" . }}
-  labels:
-    {{- include "web.labels" . | nindent 4 }}
+  name: web
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app: {{ include "web.name" . }}
+      app: web
   template:
     metadata:
       labels:
-        {{- include "web.labels" . | nindent 8 }}
+        app: web
     spec:
       containers:
-      - name: {{ .Chart.Name }}
+      - name: nginx
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         ports:
         - containerPort: {{ .Values.service.port }}
-        resources:
-          {{- toYaml .Values.resources | nindent 12 }}
+        volumeMounts:
+        - name: web-content
+          mountPath: /usr/share/nginx/html
+      volumes:
+      - name: web-content
+        configMap:
+          name: web-content
