--- a/charts/web/templates/service.yaml
+++ b/charts/web/templates/service.yaml
@@ -1,13 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "web.fullname" . }}
-  labels:
-    {{- include "web.labels" . | nindent 4 }}
+  name: web
 spec:
   type: {{ .Values.service.type }}
   ports:
   - port: {{ .Values.service.port }}
     targetPort: {{ .Values.service.port }}
   selector:
-    app.kubernetes.io/name: {{ include "web.name" . }}
+    app: web
