fixed linting issues

--- a/charts/web/Chart.yaml
+++ b/charts/web/Chart.yaml
@@ -3,4 +3,4 @@ name: web
 description: A Helm chart for Nginx web server serving the Snowplow test page
 version: "0.1"
 appVersion: "1.0.0"
-icon: "assets/ux.png"
+icon: "https://github.com/socrates-kubefirst/argo-gitops/blob/master/assets/ux.png"
