--- a/charts/web/templates/ingress.yaml
+++ b/charts/web/templates/ingress.yaml
@@ -7,8 +7,7 @@ metadata:
 spec:
   rules:
     {{- range .Values.ingress.hosts }}
-    - host: {{ .host }}
-      http:
+    -  http:
         paths:
           {{- range .paths }}
           - path: {{ .path }}
