--- a/charts/web/values.yaml
+++ b/charts/web/values.yaml
@@ -11,9 +11,14 @@ service:
 
 ingress:
   enabled: true
-  annotations: {}
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/enable-cors: "true"
+    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
+    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS"
+    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
+    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Origin, Accept"
   hosts:
-    - host: localhost
-      paths:
+    - paths:
         - path: /
           pathType: Prefix
