--- a/charts/web/templates/ingress.yaml
+++ b/charts/web/templates/ingress.yaml
@@ -1,21 +1,21 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: web
+  name: {{ include "web.fullname" . }}
   annotations:
     {{- toYaml .Values.ingress.annotations | nindent 4 }}
 spec:
   rules:
     {{- range .Values.ingress.hosts }}
-    -  http:
+    - http:
         paths:
           {{- range .paths }}
           - path: {{ .path }}
             pathType: {{ .pathType }}
             backend:
               service:
-                name: web
+                name: {{ .backend.service.name }}
                 port:
-                  number: {{ $.Values.service.port }}
+                  number: {{ .backend.service.port.number }}
           {{- end }}
     {{- end }}
