--- a/charts/web/templates/service.yaml
+++ b/charts/web/templates/service.yaml
@@ -1,11 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: web
+  name: {{ .Values.service.name }}
+  labels:
+    app: {{ .Values.service.name }}
 spec:
   type: {{ .Values.service.type }}
   ports:
-  - port: {{ .Values.service.port }}
-    targetPort: {{ .Values.service.port }}
+    - port: {{ .Values.service.port }}
+      targetPort: {{ .Values.service.port }}
   selector:
-    app: web
+    app: {{ .Values.service.name }}
