--- a/charts/web/values.yaml
+++ b/charts/web/values.yaml
@@ -6,19 +6,32 @@ image:
   tag: "latest"
 
 service:
-  type: LoadBalancer
+  name: web
+  type: ClusterIP
   port: 80
 
 ingress:
   enabled: true
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
     nginx.ingress.kubernetes.io/enable-cors: "true"
     nginx.ingress.kubernetes.io/cors-allow-origin: "*"
-    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS"
-    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
-    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Origin, Accept"
+    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
+    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT, X-CustomHeader, Keep-Alive, User-Agent, X-Requested-With, If-Modified-Since, Cache-Control, Content-Type, Authorization"
   hosts:
     - paths:
         - path: /
           pathType: Prefix
+          backend:
+            service:
+              name: web
+              port:
+                number: 80
+        - path: /api/(.*)
+          pathType: ImplementationSpecific
+          backend:
+            service:
+              name: scala-stream-collector.snowplow.svc.cluster.local
+              port:
+                number: 8080
+  tls: []
