--- a/charts/web/values.yaml
+++ b/charts/web/values.yaml
@@ -11,6 +11,7 @@ service:
   port: 80
 
 ingress:
+  name: web-ingress
   enabled: true
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
