--- a/charts/web/values.yaml
+++ b/charts/web/values.yaml
@@ -32,7 +32,7 @@ ingress:
           pathType: ImplementationSpecific
           backend:
             service:
-              name: scala-stream-collector.snowplow.svc.cluster.local
+              name: scala-stream-collector
               port:
                 number: 8080
   tls: []
