--- a/charts/web/templates/configmap.yaml
+++ b/charts/web/templates/configmap.yaml
@@ -16,9 +16,9 @@ data:
             ;p[i].q=p[i].q||[];n=l.createElement(o);g=l.getElementsByTagName(o)[0];n.async=1;
             n.src=w;g.parentNode.insertBefore(n,g)}}(window,document,"script","https://cdnjs.cloudflare.com/ajax/libs/snowplow/2.18.2/sp.js","snowplow"));
 
-            var collectorHost = window.location.hostname + ':8080';
+            var collectorHost = window.location.hostname + ':8080/api';
 
-            window.snowplow('newTracker', 'cf', collectorHost/api, {
+            window.snowplow('newTracker', 'cf', collectorHost, {
               appId: 'testApp',
               platform: 'web',
             });
