--- a/charts/web/values.yaml
+++ b/charts/web/values.yaml
@@ -14,6 +14,7 @@ ingress:
   name: web-ingress
   enabled: true
   annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
     nginx.ingress.kubernetes.io/enable-cors: "true"
     nginx.ingress.kubernetes.io/cors-allow-origin: "*"
     nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
@@ -27,8 +28,8 @@ ingress:
               name: web
               port:
                 number: 80
-        - path: /api/
-          pathType: Prefix
+        - path: /api/(.*)
+          pathType: ImplementationSpecific
           backend:
             service:
               name: web
