--- a/charts/web/values.yaml
+++ b/charts/web/values.yaml
@@ -21,7 +21,7 @@ ingress:
     nginx.ingress.kubernetes.io/cors-allow-headers: "DNT, X-CustomHeader, Keep-Alive, User-Agent, X-Requested-With, If-Modified-Since, Cache-Control, Content-Type, Authorization"
   hosts:
     - paths:
-        - path: /a
+        - path: /a/(.*)
           pathType: Prefix
           backend:
             service:
