--- a/charts/web/values.yaml
+++ b/charts/web/values.yaml
@@ -14,6 +14,7 @@ ingress:
   name: web-ingress
   enabled: true
   annotations:
+    nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /$1
     nginx.ingress.kubernetes.io/enable-cors: "true"
     nginx.ingress.kubernetes.io/cors-allow-origin: "*"
