--- a/charts/web/values.yaml
+++ b/charts/web/values.yaml
@@ -14,7 +14,6 @@ ingress:
   name: web-ingress
   enabled: true
   annotations:
-    nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /$1
     nginx.ingress.kubernetes.io/enable-cors: "true"
     nginx.ingress.kubernetes.io/cors-allow-origin: "*"
@@ -29,7 +28,7 @@ ingress:
               name: web
               port:
                 number: 80
-        - path: /b
+        - path: /()
           pathType: ImplementationSpecific
           backend:
             service:
