--- a/charts/web/templates/configmap.yaml
+++ b/charts/web/templates/configmap.yaml
@@ -16,7 +16,7 @@ data:
             ;p[i].q=p[i].q||[];n=l.createElement(o);g=l.getElementsByTagName(o)[0];n.async=1;
             n.src=w;g.parentNode.insertBefore(n,g)}}(window,document,"script","https://cdnjs.cloudflare.com/ajax/libs/snowplow/2.18.2/sp.js","snowplow"));
 
-            var collectorHost = 'http://686e7213-c40d-46c0-86a5-cba61357e59b.lb.civo.com:8080';
+            var collectorHost = '686e7213-c40d-46c0-86a5-cba61357e59b.lb.civo.com:8080';
 
             window.snowplow('newTracker', 'cf', collectorHost, {
               appId: 'testApp',
