--- a/snow-plow/snow-plow.yaml
+++ b/snow-plow/snow-plow.yaml
@@ -35,11 +35,17 @@ data:
       }
 
       crossDomain {
-        enabled = false
+        enabled = true
         domains = [ "*" ]
-        secure = true
+        secure = false
       }
 
+      cors {
+        access-control-allow-origin = "*"
+        access-control-allow-methods = "GET, PUT, POST, DELETE, PATCH, OPTIONS"
+        access-control-allow-headers = "DNT, X-CustomHeader, Keep-Alive, User-Agent, X-Requested-With, If-Modified-Since, Cache-Control, Content-Type, Authorization"
+      }
+      
       cookie {
         enabled = true
         expiration = "365 days"
