--- a/charts/events-processor/Chart.yaml
+++ b/charts/events-processor/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
 name: events-processor
-description: A Helm chart for the Snowplow events processor
+description: A Helm chart for the Snowplow events processor latest
 version: 0.1.0
-appVersion: "1.0.1"
+appVersion: "1.0.2"
