--- a/charts/events-processor/values.yaml
+++ b/charts/events-processor/values.yaml
@@ -3,7 +3,7 @@ replicaCount: 1
 image:
   repository: socrates12345/events-processor
   pullPolicy: IfNotPresent
-  tag: "latest"
+  tag: "1.0.3"
 
 service:
   type: ClusterIP
