--- a/snow-plow/iglu-server.yaml
+++ b/snow-plow/iglu-server.yaml
@@ -124,8 +124,8 @@ spec:
               collector_tstamp TIMESTAMP,
               dvce_created_tstamp TIMESTAMP,
               event TEXT,
-              event_id UUID,
-              txn_id UUID,
+              event_id CHARACTER VARYING,
+              txn_id CHARACTER VARYING,
               name_tracker TEXT,
               v_tracker TEXT,
               v_collector TEXT,
