--- a/snow-plow/iglu-server.yaml
+++ b/snow-plow/iglu-server.yaml
@@ -120,12 +120,12 @@ spec:
             CREATE TABLE atomic.events (
               app_id TEXT,
               platform TEXT,
-              etl_tstamp TIMESTAMP,
-              collector_tstamp TIMESTAMP,
-              dvce_created_tstamp TIMESTAMP,
+              etl_tstamp VARCHAR,
+              collector_tstamp VARCHAR,
+              dvce_created_tstamp VARCHAR,
               event TEXT,
-              event_id CHARACTER VARYING,
-              txn_id CHARACTER VARYING,
+              event_id VARCHAR,
+              txn_id VARCHAR,
               name_tracker TEXT,
               v_tracker TEXT,
               v_collector TEXT,
@@ -133,14 +133,14 @@ spec:
               user_fingerprint TEXT,
               user_ipaddress TEXT,
               domain_userid TEXT,
-              domain_sessionidx CHARACTER VARYING,
+              domain_sessionidx VARCHAR,
               network_userid TEXT,
               geo_country TEXT,
               geo_region TEXT,
               geo_city TEXT,
               geo_zipcode TEXT,
-              geo_latitude FLOAT,
-              geo_longitude FLOAT,
+              geo_latitude VARCHAR,
+              geo_longitude VARCHAR,
               geo_region_name TEXT,
               ip_isp TEXT,
               ip_organization TEXT,
@@ -151,13 +151,13 @@ spec:
               page_referrer TEXT,
               page_urlscheme TEXT,
               page_urlhost TEXT,
-              page_urlport INT,
+              page_urlport VARCHAR,
               page_urlpath TEXT,
               page_urlquery TEXT,
               page_urlfragment TEXT,
               refr_urlscheme TEXT,
               refr_urlhost TEXT,
-              refr_urlport INT,
+              refr_urlport VARCHAR,
               refr_urlpath TEXT,
               refr_urlquery TEXT,
               refr_urlfragment TEXT,
@@ -174,13 +174,13 @@ spec:
               se_action TEXT,
               se_label TEXT,
               se_property TEXT,
-              se_value FLOAT,
+              se_value VARCHAR,
               unstruct_event TEXT,
               tr_orderid TEXT,
               tr_affiliation TEXT,
-              tr_total FLOAT,
-              tr_tax FLOAT,
-              tr_shipping FLOAT,
+              tr_total VARCHAR,
+              tr_tax VARCHAR,
+              tr_shipping VARCHAR,
               tr_city TEXT,
               tr_state TEXT,
               tr_country TEXT,
@@ -188,12 +188,12 @@ spec:
               ti_sku TEXT,
               ti_name TEXT,
               ti_category TEXT,
-              ti_price FLOAT,
-              ti_quantity INT,
-              pp_xoffset_min FLOAT,
-              pp_xoffset_max FLOAT,
-              pp_yoffset_min FLOAT,
-              pp_yoffset_max FLOAT,
+              ti_price VARCHAR,
+              ti_quantity VARCHAR,
+              pp_xoffset_min VARCHAR,
+              pp_xoffset_max VARCHAR,
+              pp_yoffset_min VARCHAR,
+              pp_yoffset_max VARCHAR,
               useragent TEXT,
               br_name TEXT,
               br_family TEXT,
@@ -201,52 +201,52 @@ spec:
               br_type TEXT,
               br_renderengine TEXT,
               br_lang TEXT,
-              br_features_pdf CHARACTER VARYING,
-              br_features_flash BOOLEAN,
-              br_features_java BOOLEAN,
-              br_features_director BOOLEAN,
-              br_features_quicktime BOOLEAN,
-              br_features_realplayer BOOLEAN,
-              br_features_windowsmedia BOOLEAN,
-              br_features_gears BOOLEAN,
-              br_features_silverlight BOOLEAN,
-              br_cookies BOOLEAN,
+              br_features_pdf VARCHAR,
+              br_features_flash VARCHAR,
+              br_features_java VARCHAR,
+              br_features_director VARCHAR,
+              br_features_quicktime VARCHAR,
+              br_features_realplayer VARCHAR,
+              br_features_windowsmedia VARCHAR,
+              br_features_gears VARCHAR,
+              br_features_silverlight VARCHAR,
+              br_cookies VARCHAR,
               br_colordepth TEXT,
-              br_viewwidth CHARACTER VARYING,
-              br_viewheight INT,
+              br_viewwidth VARCHAR,
+              br_viewheight VARCHAR,
               os_name TEXT,
               os_family TEXT,
               os_manufacturer TEXT,
               os_timezone TEXT,
               dvce_type TEXT,
-              dvce_ismobile BOOLEAN,
-              dvce_screenwidth INT,
-              dvce_screenheight INT,
+              dvce_ismobile VARCHAR,
+              dvce_screenwidth VARCHAR,
+              dvce_screenheight VARCHAR,
               doc_charset TEXT,
-              doc_width CHARACTER VARYING,
-              doc_height INT,
+              doc_width VARCHAR,
+              doc_height VARCHAR,
               tr_currency TEXT,
-              tr_total_base FLOAT,
-              tr_tax_base FLOAT,
-              tr_shipping_base FLOAT,
+              tr_total_base VARCHAR,
+              tr_tax_base VARCHAR,
+              tr_shipping_base VARCHAR,
               ti_currency TEXT,
-              ti_price_base FLOAT,
+              ti_price_base VARCHAR,
               base_currency TEXT,
               geo_timezone TEXT,
               mkt_clickid TEXT,
               mkt_network TEXT,
               etl_tags TEXT,
-              dvce_sent_tstamp TIMESTAMP,
+              dvce_sent_tstamp VARCHAR,
               refr_domain_userid TEXT,
-              refr_device_tstamp TIMESTAMP,
+              refr_device_tstamp VARCHAR,
               domain_sessionid TEXT,
-              derived_tstamp TIMESTAMP WITHOUT TIME ZONE,
+              derived_tstamp VARCHAR,
               event_vendor TEXT,
               event_name TEXT,
               event_format TEXT,
               event_version TEXT,
               event_fingerprint TEXT,
-              true_tstamp TIMESTAMP WITHOUT TIME ZONE,
+              true_tstamp VARCHAR,
               -- Additional fields to make up to 130 columns
               custom_field1 TEXT,
               custom_field2 TEXT,
