--- a/charts/websocket/Chart.yaml
+++ b/charts/websocket/Chart.yaml
@@ -1,5 +1,6 @@
 apiVersion: v2
 name: websocket
 description: A Helm chart for FastAPI WebSocket server
-version: 0.1
-appVersion: "1.0.1"
+version: "0.1"
+appVersion: "1.0.2"
+icon: "https://github.com/socrates-kubefirst/argo-gitops/blob/master/assets/ux.png"
