--- a/charts/websocket/templates/ingress.yaml
+++ b/charts/websocket/templates/ingress.yaml
@@ -1,36 +1,26 @@
+{{- if .Values.ingress.enabled }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ include "websocket.fullname" . }}
-  labels:
-    {{- include "websocket.labels" . | nindent 4 }}
+  name: {{ .Release.Name }}-ingress
   annotations:
     {{- range $key, $value := .Values.ingress.annotations }}
       {{ $key }}: {{ $value | quote }}
     {{- end }}
 spec:
+  ingressClassName: {{ .Values.ingress.className | quote }}
   rules:
     {{- range .Values.ingress.hosts }}
-    - host: {{ .host | quote }}
-      http:
+    - http:
         paths:
           {{- range .paths }}
           - path: {{ .path }}
             pathType: {{ .pathType }}
             backend:
               service:
-                name: {{ include "websocket.fullname" $ }}
+                name: {{ $.Release.Name }}-service
                 port:
-                  number: {{ .port }}
+                  number: 8000
           {{- end }}
     {{- end }}
-  {{- if .Values.ingress.tls }}
-  tls:
-    {{- range .Values.ingress.tls }}
-    - hosts:
-        {{- range .hosts }}
-        - {{ . | quote }}
-        {{- end }}
-      secretName: {{ .secretName }}
-    {{- end }}
-  {{- end }}
+{{- end }}
