--- a/charts/websocket/values.yaml
+++ b/charts/websocket/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 
 image:
   repository: socrates12345/websocket
-  tag: "latest"
+  tag: "1.0.1"
   pullPolicy: IfNotPresent
 
 service:
@@ -11,11 +11,11 @@ service:
 
 ingress:
   enabled: true
+  className: ""
   annotations: {}
   hosts:
-    - host: websocket.local
-      paths:
+    - paths:
         - path: /
           pathType: Prefix
-          port: 8000
-  tls: []
+
+resources: {}
