--- a/charts/websocket/templates/service.yaml
+++ b/charts/websocket/templates/service.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: {{ .Release.Name }}
 spec:
-  type: {{ .Values.service.type }}
+  type: LoadBalancer
   ports:
     - port: 8000
       targetPort: 8000
