--- a/kafka/templates/control-center.yaml
+++ b/kafka/templates/control-center.yaml
@@ -4,6 +4,8 @@ kind: ControlCenter
 metadata:
   name: controlcenter
   namespace: {{ .Values.namespace }}
+  labels:
+    app: {{ .Release.Name }}-controlcenter
 spec:
   replicas: 1
   image:
