--- a/kafka/values.yaml
+++ b/kafka/values.yaml
@@ -43,3 +43,5 @@ controlcenter:
     CONTROL_CENTER_MONITORING_INTERCEPTOR_TOPIC_PARTITIONS: 1
     CONFLUENT_METRICS_TOPIC_REPLICATION: 1
     PORT: 9021
+  service:
+    type: LoadBalancer
