--- a/charts/websocket/templates/service.yaml
+++ b/charts/websocket/templates/service.yaml
@@ -1,13 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-service
-  labels:
-    app: {{ .Release.Name }}
+  name: controlcenter
+  namespace: {{ .Values.namespace }}
 spec:
-  type: LoadBalancer
-  ports:
-    - port: 8000
-      targetPort: 8000
+  type: {{ .Values.controlcenter.service.type }}
+  clusterIP: ""
   selector:
-    app: {{ .Release.Name }}
+    app: {{ .Release.Name }}-controlcenter
+  ports:
+    - name: http
+      port: 9021
+      targetPort: 9021
