--- a/charts/websocket/templates/service.yaml
+++ b/charts/websocket/templates/service.yaml
@@ -1,14 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: controlcenter
-  namespace: {{ .Values.namespace }}
+  name: {{ .Release.Name }}-service
+  labels:
+    app: {{ .Release.Name }}
 spec:
-  type: {{ .Values.controlcenter.service.type }}
-  clusterIP: ""
-  selector:
-    app: {{ .Release.Name }}-controlcenter
+  type: LoadBalancer
   ports:
-    - name: http
-      port: 9021
-      targetPort: 9021
+    - port: 8000
+      targetPort: 8000
+  selector:
+    app: {{ .Release.Name }}
