--- a/charts/snowplow-kafka-pg-loader/templates/configmap.yaml
+++ b/charts/snowplow-kafka-pg-loader/templates/configmap.yaml
@@ -6,39 +6,14 @@ metadata:
     app: {{ .Release.Name }}-snowplow-kafka-pg-loader
 data:
   config.conf: |
-    kafka {
-      brokers = "kafka.confluent.svc.cluster.local:9092"
-      topic = "snowplow_enriched_good"
-      consumerGroupId = "kafkaPGLoader"
-      producerConf {
-        "security.protocol" = "SASL_SSL"
-        "sasl.mechanisms" = "PLAIN"
-        "sasl.username" = "UJXR2AHHSOHL2O4K"
-        "sasl.password" = "LZDE86rm7hlM8aLlDfiPv7uu3NhwP0we5QnKtZ72AMkj8yjKvNx/1U/sC4CSWVZ1"
-      }
-      consumerConf {
-        "security.protocol" = "SASL_SSL"
-        "sasl.mechanisms" = "PLAIN"
-        "sasl.username" = "UJXR2AHHSOHL2O4K"
-        "sasl.password" = "LZDE86rm7hlM8aLlDfiPv7uu3NhwP0we5QnKtZ72AMkj8yjKvNx/1U/sC4CSWVZ1"
-      }
-    }
 
-
-    postgres {
-      driver = "org.postgresql.Driver"
-      url = "jdbc:postgresql://iglu-postgres.snowplow.svc.cluster.local:5432/igludb?currentSchema=atomic"
-      username = "sp_user"
-      password = "sp_password"
-      groupid = "GroupID"
-      numberOfThreads = 1
-    }
+  
   kafka.brokers: pkc-12576z.us-west2.gcp.confluent.cloud:9092,kafka.confluent.svc.cluster.local:9092
   kafka.topic: snowplow_enriched_good
   kafka.security.protocol: SASL_SSL
   kafka.sasl.mechanisms: PLAIN
   kafka.sasl.username: UJXR2AHHSOHL2O4K
   kafka.sasl.password: L4piWdT0pE4t+LiP5xLrkfWxmhePL8jdk0LaSX2N5cSevSBF1EHjr2oygqJX64FC
-  postgres.url: jdbc:postgresql://iglu-postgres.snowplow.svc.cluster.local:5432/igludb?currentSchema=atomic
+  postgres.url: jdbc:postgresql://ep-proud-snow-a55l1fw5.us-east-2.aws.neon.tech/igludb?sslmode=require?currentSchema=atomic
   postgres.username: sp_user
-  postgres.password: sp_password
+  postgres.password: dcKjguD92WeY
