--- a/snow-plow/iglu-server.yaml
+++ b/snow-plow/iglu-server.yaml
@@ -77,207 +77,208 @@ spec:
 ---
 
 # Iglu Database Initialization Job
-apiVersion: batch/v1
-kind: Job
-metadata:
-  name: iglu-db-init
-  namespace: snowplow
-spec:
-  template:
-    spec:
-      initContainers:
-      - name: wait-for-postgres
-        image: postgres:13
-        command: ['sh', '-c', 'until pg_isready -h iglu-postgres.snowplow.svc.cluster.local -U sp_user -d igludb; do echo waiting for postgres; sleep 2; done']
-        env:
-        - name: POSTGRES_USER
-          value: sp_user
-        - name: POSTGRES_PASSWORD
-          value: sp_password
-      containers:
-      - name: iglu-db-init
-        image: postgres:13
-        command: ["/bin/sh", "-c"]
-        args:
-          - |
-            PGPASSWORD=$POSTGRES_PASSWORD psql -U $POSTGRES_USER -d $POSTGRES_DB -h iglu-postgres.snowplow.svc.cluster.local -c "
-            CREATE TABLE IF NOT EXISTS public.iglu_schemas (
-              vendor VARCHAR(128) NOT NULL,
-              name VARCHAR(128) NOT NULL,
-              format VARCHAR(128) NOT NULL,
-              model INTEGER NOT NULL,
-              revision INTEGER NOT NULL,
-              addition INTEGER NOT NULL,
-              created_at TIMESTAMP WITHOUT TIME ZONE NOT NULL,
-              updated_at TIMESTAMP WITHOUT TIME ZONE NOT NULL,
-              is_public BOOLEAN NOT NULL,
-              body JSON NOT NULL,
-              superseded_by VARCHAR(128)
-            );
+#uncomment for localdb
+# apiVersion: batch/v1
+# kind: Job
+# metadata:
+#   name: iglu-db-init
+#   namespace: snowplow
+# spec:
+#   template:
+#     spec:
+#       initContainers:
+#       - name: wait-for-postgres
+#         image: postgres:13
+#         command: ['sh', '-c', 'until pg_isready -h iglu-postgres.snowplow.svc.cluster.local -U sp_user -d igludb; do echo waiting for postgres; sleep 2; done']
+#         env:
+#         - name: POSTGRES_USER
+#           value: sp_user
+#         - name: POSTGRES_PASSWORD
+#           value: sp_password
+#       containers:
+#       - name: iglu-db-init
+#         image: postgres:13
+#         command: ["/bin/sh", "-c"]
+#         args:
+#           - |
+#             PGPASSWORD=$POSTGRES_PASSWORD psql -U $POSTGRES_USER -d $POSTGRES_DB -h iglu-postgres.snowplow.svc.cluster.local -c "
+#             CREATE TABLE IF NOT EXISTS public.iglu_schemas (
+#               vendor VARCHAR(128) NOT NULL,
+#               name VARCHAR(128) NOT NULL,
+#               format VARCHAR(128) NOT NULL,
+#               model INTEGER NOT NULL,
+#               revision INTEGER NOT NULL,
+#               addition INTEGER NOT NULL,
+#               created_at TIMESTAMP WITHOUT TIME ZONE NOT NULL,
+#               updated_at TIMESTAMP WITHOUT TIME ZONE NOT NULL,
+#               is_public BOOLEAN NOT NULL,
+#               body JSON NOT NULL,
+#               superseded_by VARCHAR(128)
+#             );
 
-            CREATE SCHEMA IF NOT EXISTS atomic;
+#             CREATE SCHEMA IF NOT EXISTS atomic;
 
-            CREATE TABLE atomic.events (
-              app_id TEXT,
-              platform TEXT,
-              etl_tstamp VARCHAR,
-              collector_tstamp VARCHAR,
-              dvce_created_tstamp VARCHAR,
-              event TEXT,
-              event_id VARCHAR,
-              txn_id VARCHAR,
-              name_tracker TEXT,
-              v_tracker TEXT,
-              v_collector TEXT,
-              v_etl TEXT,
-              user_fingerprint TEXT,
-              user_ipaddress TEXT,
-              domain_userid TEXT,
-              domain_sessionidx VARCHAR,
-              network_userid TEXT,
-              geo_country TEXT,
-              geo_region TEXT,
-              geo_city TEXT,
-              geo_zipcode TEXT,
-              geo_latitude VARCHAR,
-              geo_longitude VARCHAR,
-              geo_region_name TEXT,
-              ip_isp TEXT,
-              ip_organization TEXT,
-              ip_domain TEXT,
-              ip_netspeed TEXT,
-              page_url TEXT,
-              page_title TEXT,
-              page_referrer TEXT,
-              page_urlscheme TEXT,
-              page_urlhost TEXT,
-              page_urlport VARCHAR,
-              page_urlpath TEXT,
-              page_urlquery TEXT,
-              page_urlfragment TEXT,
-              refr_urlscheme TEXT,
-              refr_urlhost TEXT,
-              refr_urlport VARCHAR,
-              refr_urlpath TEXT,
-              refr_urlquery TEXT,
-              refr_urlfragment TEXT,
-              refr_medium TEXT,
-              refr_source TEXT,
-              refr_term TEXT,
-              mkt_medium TEXT,
-              mkt_source TEXT,
-              mkt_term TEXT,
-              mkt_content TEXT,
-              mkt_campaign TEXT,
-              contexts TEXT,
-              se_category TEXT,
-              se_action TEXT,
-              se_label TEXT,
-              se_property TEXT,
-              se_value VARCHAR,
-              unstruct_event TEXT,
-              tr_orderid TEXT,
-              tr_affiliation TEXT,
-              tr_total VARCHAR,
-              tr_tax VARCHAR,
-              tr_shipping VARCHAR,
-              tr_city TEXT,
-              tr_state TEXT,
-              tr_country TEXT,
-              ti_orderid TEXT,
-              ti_sku TEXT,
-              ti_name TEXT,
-              ti_category TEXT,
-              ti_price VARCHAR,
-              ti_quantity VARCHAR,
-              pp_xoffset_min VARCHAR,
-              pp_xoffset_max VARCHAR,
-              pp_yoffset_min VARCHAR,
-              pp_yoffset_max VARCHAR,
-              useragent TEXT,
-              br_name TEXT,
-              br_family TEXT,
-              br_version TEXT,
-              br_type TEXT,
-              br_renderengine TEXT,
-              br_lang TEXT,
-              br_features_pdf VARCHAR,
-              br_features_flash VARCHAR,
-              br_features_java VARCHAR,
-              br_features_director VARCHAR,
-              br_features_quicktime VARCHAR,
-              br_features_realplayer VARCHAR,
-              br_features_windowsmedia VARCHAR,
-              br_features_gears VARCHAR,
-              br_features_silverlight VARCHAR,
-              br_cookies VARCHAR,
-              br_colordepth TEXT,
-              br_viewwidth VARCHAR,
-              br_viewheight VARCHAR,
-              os_name TEXT,
-              os_family TEXT,
-              os_manufacturer TEXT,
-              os_timezone TEXT,
-              dvce_type TEXT,
-              dvce_ismobile VARCHAR,
-              dvce_screenwidth VARCHAR,
-              dvce_screenheight VARCHAR,
-              doc_charset TEXT,
-              doc_width VARCHAR,
-              doc_height VARCHAR,
-              tr_currency TEXT,
-              tr_total_base VARCHAR,
-              tr_tax_base VARCHAR,
-              tr_shipping_base VARCHAR,
-              ti_currency TEXT,
-              ti_price_base VARCHAR,
-              base_currency TEXT,
-              geo_timezone TEXT,
-              mkt_clickid TEXT,
-              mkt_network TEXT,
-              etl_tags TEXT,
-              dvce_sent_tstamp VARCHAR,
-              refr_domain_userid TEXT,
-              refr_device_tstamp VARCHAR,
-              domain_sessionid TEXT,
-              derived_tstamp VARCHAR,
-              event_vendor TEXT,
-              event_name TEXT,
-              event_format TEXT,
-              event_version TEXT,
-              event_fingerprint TEXT,
-              true_tstamp VARCHAR,
-              -- Additional fields to make up to 130 columns
-              custom_field1 TEXT,
-              custom_field2 TEXT,
-              custom_field3 TEXT,
-              custom_field4 TEXT,
-              custom_field5 TEXT,
-              custom_field6 TEXT,
-              custom_field7 TEXT,
-              custom_field8 TEXT,
-              custom_field9 TEXT,
-              custom_field10 TEXT,
-              custom_field11 TEXT,
-              custom_field12 TEXT,
-              custom_field13 TEXT,
-              custom_field14 TEXT,
-              custom_field15 TEXT,
-              custom_field16 TEXT,
-              custom_field17 TEXT,
-              custom_field18 TEXT,
-              custom_field19 TEXT,
-              custom_field20 TEXT
-            );
-            "
-        env:
-        - name: POSTGRES_USER
-          value: sp_user
-        - name: POSTGRES_PASSWORD
-          value: sp_password
-        - name: POSTGRES_DB
-          value: igludb
-      restartPolicy: OnFailure
+#             CREATE TABLE atomic.events (
+#               app_id TEXT,
+#               platform TEXT,
+#               etl_tstamp VARCHAR,
+#               collector_tstamp VARCHAR,
+#               dvce_created_tstamp VARCHAR,
+#               event TEXT,
+#               event_id VARCHAR,
+#               txn_id VARCHAR,
+#               name_tracker TEXT,
+#               v_tracker TEXT,
+#               v_collector TEXT,
+#               v_etl TEXT,
+#               user_fingerprint TEXT,
+#               user_ipaddress TEXT,
+#               domain_userid TEXT,
+#               domain_sessionidx VARCHAR,
+#               network_userid TEXT,
+#               geo_country TEXT,
+#               geo_region TEXT,
+#               geo_city TEXT,
+#               geo_zipcode TEXT,
+#               geo_latitude VARCHAR,
+#               geo_longitude VARCHAR,
+#               geo_region_name TEXT,
+#               ip_isp TEXT,
+#               ip_organization TEXT,
+#               ip_domain TEXT,
+#               ip_netspeed TEXT,
+#               page_url TEXT,
+#               page_title TEXT,
+#               page_referrer TEXT,
+#               page_urlscheme TEXT,
+#               page_urlhost TEXT,
+#               page_urlport VARCHAR,
+#               page_urlpath TEXT,
+#               page_urlquery TEXT,
+#               page_urlfragment TEXT,
+#               refr_urlscheme TEXT,
+#               refr_urlhost TEXT,
+#               refr_urlport VARCHAR,
+#               refr_urlpath TEXT,
+#               refr_urlquery TEXT,
+#               refr_urlfragment TEXT,
+#               refr_medium TEXT,
+#               refr_source TEXT,
+#               refr_term TEXT,
+#               mkt_medium TEXT,
+#               mkt_source TEXT,
+#               mkt_term TEXT,
+#               mkt_content TEXT,
+#               mkt_campaign TEXT,
+#               contexts TEXT,
+#               se_category TEXT,
+#               se_action TEXT,
+#               se_label TEXT,
+#               se_property TEXT,
+#               se_value VARCHAR,
+#               unstruct_event TEXT,
+#               tr_orderid TEXT,
+#               tr_affiliation TEXT,
+#               tr_total VARCHAR,
+#               tr_tax VARCHAR,
+#               tr_shipping VARCHAR,
+#               tr_city TEXT,
+#               tr_state TEXT,
+#               tr_country TEXT,
+#               ti_orderid TEXT,
+#               ti_sku TEXT,
+#               ti_name TEXT,
+#               ti_category TEXT,
+#               ti_price VARCHAR,
+#               ti_quantity VARCHAR,
+#               pp_xoffset_min VARCHAR,
+#               pp_xoffset_max VARCHAR,
+#               pp_yoffset_min VARCHAR,
+#               pp_yoffset_max VARCHAR,
+#               useragent TEXT,
+#               br_name TEXT,
+#               br_family TEXT,
+#               br_version TEXT,
+#               br_type TEXT,
+#               br_renderengine TEXT,
+#               br_lang TEXT,
+#               br_features_pdf VARCHAR,
+#               br_features_flash VARCHAR,
+#               br_features_java VARCHAR,
+#               br_features_director VARCHAR,
+#               br_features_quicktime VARCHAR,
+#               br_features_realplayer VARCHAR,
+#               br_features_windowsmedia VARCHAR,
+#               br_features_gears VARCHAR,
+#               br_features_silverlight VARCHAR,
+#               br_cookies VARCHAR,
+#               br_colordepth TEXT,
+#               br_viewwidth VARCHAR,
+#               br_viewheight VARCHAR,
+#               os_name TEXT,
+#               os_family TEXT,
+#               os_manufacturer TEXT,
+#               os_timezone TEXT,
+#               dvce_type TEXT,
+#               dvce_ismobile VARCHAR,
+#               dvce_screenwidth VARCHAR,
+#               dvce_screenheight VARCHAR,
+#               doc_charset TEXT,
+#               doc_width VARCHAR,
+#               doc_height VARCHAR,
+#               tr_currency TEXT,
+#               tr_total_base VARCHAR,
+#               tr_tax_base VARCHAR,
+#               tr_shipping_base VARCHAR,
+#               ti_currency TEXT,
+#               ti_price_base VARCHAR,
+#               base_currency TEXT,
+#               geo_timezone TEXT,
+#               mkt_clickid TEXT,
+#               mkt_network TEXT,
+#               etl_tags TEXT,
+#               dvce_sent_tstamp VARCHAR,
+#               refr_domain_userid TEXT,
+#               refr_device_tstamp VARCHAR,
+#               domain_sessionid TEXT,
+#               derived_tstamp VARCHAR,
+#               event_vendor TEXT,
+#               event_name TEXT,
+#               event_format TEXT,
+#               event_version TEXT,
+#               event_fingerprint TEXT,
+#               true_tstamp VARCHAR,
+#               -- Additional fields to make up to 130 columns
+#               custom_field1 TEXT,
+#               custom_field2 TEXT,
+#               custom_field3 TEXT,
+#               custom_field4 TEXT,
+#               custom_field5 TEXT,
+#               custom_field6 TEXT,
+#               custom_field7 TEXT,
+#               custom_field8 TEXT,
+#               custom_field9 TEXT,
+#               custom_field10 TEXT,
+#               custom_field11 TEXT,
+#               custom_field12 TEXT,
+#               custom_field13 TEXT,
+#               custom_field14 TEXT,
+#               custom_field15 TEXT,
+#               custom_field16 TEXT,
+#               custom_field17 TEXT,
+#               custom_field18 TEXT,
+#               custom_field19 TEXT,
+#               custom_field20 TEXT
+#             );
+#             "
+#         env:
+#         - name: POSTGRES_USER
+#           value: sp_user
+#         - name: POSTGRES_PASSWORD
+#           value: sp_password
+#         - name: POSTGRES_DB
+#           value: igludb
+#       restartPolicy: OnFailure
 
 ---
 
